# news-nlp-classifier

./: .dockerignore  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
configs/: base.yaml  base.yml
docker/: Dockerfile
scripts/: download_data.py  eval_model.py  make_splits.py  train_model.py
src/newsclf/api/: main.py  schemas.py
src/newsclf/experiments/: preprocess_step_by_step.py
src/newsclf/preprocessing/: spacy_preprocess.py
src/newsclf/utils/: config.py  logging.py
tests/: test_api.py  test_preprocess.py  test_smoke.py
ui/: streamlit_app.py
