[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsclf"
version = "0.1.0"
description = "Production-style News NLP Classifier (spaCy + TF-IDF/Word2Vec + FastAPI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "datasets>=2.18",
  "spacy>=3.7.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"